--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "histogram"
+name = "stream_histogram"
 version = "0.1.1"
 authors = ["mike zhang <zhangmingkai19892013@gmail.com>"]
 edition = "2018"
 readme = "README.md"
 repository = "https://github.com/zhangmingkai4315/histogram"
-keywords = ["histogram", "linked-list","statistic","quantile","cumulative","distribution","variance"]
+keywords = ["histogram","quantile","cumulative","distribution","variance"]
+description = "a rust library for efficient histogram approximations"
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
